--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "cheerio": "^0.20.0",
+    "cron": "^1.1.0",
     "follow-redirects": "^0.1.0",
     "mongodb": "^2.1.18",
     "pm2": "^1.1.3",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "slackbots": "^0.5.1"
   },
   "devDependencies": {},
   "scripts": {
