--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Collect all offers within given selector from page",
   "main": "main.js",
   "dependencies": {
-    "@slack/client": "^3.1.0",
     "bluebird": "^3.3.5",
     "cheerio": "^0.20.0",
     "cron": "^1.1.0",
     "follow-redirects": "^0.1.0",
     "mongodb": "^2.1.18",
+    "node-slack": "0.0.7",
     "pm2": "^1.1.3",
     "request": "^2.72.0"
   },
